--- a/tempjpwNow/IndivLendHome.html
+++ b/tempjpwNow/IndivLendHome.html
@@ -1012,10 +1012,10 @@
 <table id='productstable' width='100%'>
 	<thead>
 		<tr>
-			<th>Product Name</th>
-			<th>Created</th>
-			<th>Last Modified</th>
-			<th>Active</th>
+			<th>{{=$ctx.doI18N("table.heading.product.name")}}</th>
+			<th>{{=$ctx.doI18N("table.heading.product.created")}}</th>
+			<th>{{=$ctx.doI18N("table.heading.product.modified")}}</th>
+			<th>{{=$ctx.doI18N("table.heading.product.active")}}</th>
 			<th>&nbsp;</th>
 		</tr>
 	</thead>
