--- a/JavaScriptApps/IndivLendHome.html
+++ b/JavaScriptApps/IndivLendHome.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" type="text/css" href="resources/excel/excel-2007.css" />
 
 <link rel="stylesheet" type="text/css" href="resources/stretchyreporting/stretchyreporting.css">
-
+<link rel="stylesheet" type="text/css" href="resources/IndividualLendingCode.css" />
 
 <script type="text/javascript" src="resources/libs/jquery-1.7.min.js"></script>
 <script type="text/javascript" src="resources/libs/jquery-ui-1.8.16.custom/js/jquery-ui-1.8.16.custom.min.js"></script>
@@ -35,29 +35,13 @@
 	google.load("visualization", "1", {packages:["corechart"]});
 </script>
 
+<script type="text/javascript" src="resources/IndividualLendingCode.js"></script>
 
 </head>
+
 <body>
 
-<style type="text/css">
-
-#settings {
-    	margin-top: 20px;
-    	margin-left: 20px;
-}
-
-h2 {
-    	font-size: 16px;
-    	margin-bottom: 10px;
-}
-
-#toptable {
-	display: none;
-}
-</style>
-
 <div id="container"></div>
-<script type="text/javascript" src="resources/IndividualLendingCode.js"></script>
 
 <script>
 $(document).ready(function() {
