--- a/JavaScriptApps/IndivLendHome.html
+++ b/JavaScriptApps/IndivLendHome.html
@@ -42,37 +42,9 @@
 <body>
 
 <div id="container"></div>
-
 <script>
 $(document).ready(function() {
-
-	baseCulture = 'en';
-	if (QueryParameters["baseCulture"]) baseCulture = QueryParameters["baseCulture"];
-	switch(baseCulture)
-	{
-			case "en":
-  				break;
-			case "fr":
-  				break;
-			case "es":
-  				break;
-			case "pt":
-  				break;
-			case "zh":
-  				break;
-			default:
-  				alert("The culture/language you specified (" + baseCulture + ") isn't available so will default to 'en' (English).");
-				baseCulture = 'en';
-	}
-	setCulture(baseCulture);	
-
-	jsViewsRegisterHelpers();
-
-	//baseApiUrl = "https://localhost:8443/mifosng-provider/api/v1/";
-	baseApiUrl = "https://ec2-46-137-62-163.eu-west-1.compute.amazonaws.com:8443/mifosng-provider/api/v1/";
-	if (QueryParameters["baseApiUrl"]) baseApiUrl = QueryParameters["baseApiUrl"];
-	
-	showILLogon("container");
+	initialiseAndShowILLogon();
 });
 </script>
 
